--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "script.js",
   "scripts": {
     "start": "node server.js",
-    "start:dev": "nodemon server.js"
+    "start:dev": "cross-env PORT=3000 DB_HOST=localhost DB_PORT=5432 DB_USER=postgres DB_PASS=5JzRjJuHwcgWZa4tE842 DB_NAME=smart-brain ENV=dev nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +18,8 @@
     "node-fetch": "^2.6.11",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
